--- a/nn.html
+++ b/nn.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>tima.com</title>
+	<title>Temirlan Turgumbekov</title>
 </head>
 <body style="background: #000">
 	
