--- a/nn.html
+++ b/nn.html
@@ -6,11 +6,11 @@
 </head>
 <body style="background: #000">
 	
-	<left><img style="border-radius: 50%; " src="https://i.mycdn.me/i?r=AyH4iRPQ2q0otWIFepML2LxRCtMQ8SHyZpgeUQQCgZgf2w">
+	<right><img style="border-radius: 50%; " src="https://i.mycdn.me/i?r=AyH4iRPQ2q0otWIFepML2LxRCtMQ8SHyZpgeUQQCgZgf2w">
 		<h1 style="color: red">Temrlan Turgunbekov</h1>
 		<p style="color: #fff">Adress:Ankara1/8.phone number:0700922661
 		<p style="color: #red">Ankara 1/8
 	        <p style="color: #red">0700922661
-</left>
+</right>
 </body>
 </html>
